refactor and add threadpool
- refactor handlers
- add fake database to store failed events instead of logging them directly
- add batching and threadpool

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,9 @@ select = [
 ]
 
 [tool.mypy]
+# Allows Type[T] to refer to abstract classes, which is not otherwise supported.
+# See https://github.com/python/mypy/issues/4717
+disable_error_code = "type-abstract"
 disallow_untyped_defs = true
 show_error_codes = true
 warn_unused_ignores = true
