--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,6 @@ pydantic = "^2.7.2"
 typer = "^0.12.3"
 loguru = "^0.7.2"
 ijson = "^3.2.3"
-pydantic-extra-types = "^2.7.0"
-phonenumbers = "^8.13.37"
 email-validator = "^2.1.1"
 
 [tool.poetry.group.dev.dependencies]
@@ -21,10 +19,11 @@ ruff = "^0.4.6"
 mypy = "^1.10.0"
 refurb = "^2.0.0"
 pytest = "^8.2.1"
-ipython = "^8.24.0"
 xenon = "^0.9.1"
 faker = "^25.3.0"
 pytest-mock = "^3.14.0"
+ipython = "^8.24.0"
+pytest-cov = "^5.0.0"
 
 [tool.poetry.scripts]
 json-redo = "json_redo_interview.cli:main"
@@ -87,7 +86,11 @@ disable_error_code = "type-abstract"
 disallow_untyped_defs = true
 show_error_codes = true
 warn_unused_ignores = true
-ignore_missing_imports = true
+ignore_missing_imports = true # ijson package does not have type hints
 disallow_incomplete_defs = true
 warn_redundant_casts = true
 plugins = ["pydantic.mypy"]
+
+
+[tool.coverage.report]
+fail_under = 85
