--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ ipython = "^8.24.0"
 pytest-cov = "^5.0.0"
 
 [tool.poetry.scripts]
-json-redo = "json_redo_interview.cli:main"
+json-redo = "json_redo_interview.cli:app"
 
 [build-system]
 requires = ["poetry-core"]
